--- a/week3/www/index.html
+++ b/week3/www/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="jQindex.js"></script>    
-
-</head>
-<body>
-<h1>Hello World</h1>
-    
-    
-</body>
-
-
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jQindex.js"></script>
+    <title>Hello, world!</title>
+  </head>
+  <body>
+      <div id='content'></div>
